# HyperMania

./: .gitignore  .gitmodules  CMakeLists.txt  MANUAL.md  README.md  SETTINGS.md  mod.ini  modSettings.ini
src/: BUGS  CMakeLists.txt  LICENSE  STRUCTURE  build.sh  import-class.sh  import-enemy.sh  makereleases.sh  mingw.cmake  run.sh
src/hypermania/: All.c  HyperManiaLink.c  HyperManiaLink.h  HyperManiaVariables.c  HyperManiaVariables.h  ModConfig.h  ModFunctions.c  ModFunctions.h  ModLink.c  ModLink.h  ModVariables.c  ModVariables.h  crash.h  dllmain.c  util.c  util.h
src/hypermania/Mania/: All.h  CollapsingPlatform.c  CollapsingPlatform.h  Explosion.c  FarPlane.h  ItemBox.h  Player.h  SaveGame.h  ScoreBonus.h  Zone.c  Zone.h
src/hypermania/Mania/BSS/: BSS_Setup.h
src/hypermania/Mania/CPZ/: AmoebaDroid.c  AmoebaDroid.h  Bubbler.c  Bubbler.h  CPZSetup.h  CaterkillerJr.h  Grabber.h  Spiny.c  Spiny.h
src/hypermania/Mania/Common/: CollapsingPlatform.h
src/hypermania/Mania/Cutscene/: FXFade.h
src/hypermania/Mania/ERZ/: ERZStart.h  PhantomEgg.c  PhantomEgg.h  PhantomMystic.h  PhantomShinobi.h
src/hypermania/Mania/FBZ/: BigSqueeze.c  BigSqueeze.h  Blaster.c  Blaster.h  Clucker.c  Clucker.h  FBZTrash.h  Technosqueek.c  Technosqueek.h
src/hypermania/Mania/GHZ/: Batbrain.h  BuzzBomber.h  Chopper.h  Crabmeat.h  DDWrecker.h  DERobot.c  DERobot.h  Motobug.h  Newtron.h  Splats.h
src/hypermania/Mania/Global/: Animals.h  Camera.h  Debris.h  Explosion.h  HUD.h  ImageTrail.h  InvincibleStars.c  InvincibleStars.h  ItemBox.c  ItemBox.h  Music.h  PauseMenu.h  Player.h  Ring.h  SaveGame.h  ScoreBonus.h  SpecialRing.h  Zone.h
src/hypermania/Mania/HCZ/: Blastoid.c  Blastoid.h  Buggernaut.h  HCZSetup.c  HCZSetup.h  Jawz.h  Jellygnite.h  LaundroMobile.c  LaundroMobile.h  MegaChopper.c  MegaChopper.h  Pointdexter.c  Pointdexter.h  TurboSpiker.h
src/hypermania/Mania/LRZ/: Drillerdroid.h  DrillerdroidO.h  Fireworm.c  Fireworm.h  HPZEmerald.h  HeavyKing.h  HeavyRider.h  Rexon.h  RockDrill.h  Toxomister.c  Toxomister.h
src/hypermania/Mania/MMZ/: EggPistonsMKII.h  FarPlane.h  Gachapandora.c  Gachapandora.h  MechaBu.h  PlaneSeeSaw.h  PohBee.c  PohBee.h  Scarab.h
src/hypermania/Mania/MSZ/: Armadiloid.h  Bumpalo.h  Cactula.h  DBTower.h  Hatterkiller.c  Hatterkiller.h  HeavyMystic.h  Rattlekiller.h  RollerMKII.c  RollerMKII.h  UberCaterkiller.h  Vultron.c  Vultron.h
src/hypermania/Mania/Menu/: LevelSelect.h  UISaveSlot.h
src/hypermania/Mania/OOZ/: Aquis.h  MegaOctus.c  MegaOctus.h  MeterDroid.h  OOZSetup.h  Octus.h  Sol.h
src/hypermania/Mania/PGZ/: Dragonfly.h  HeavyShinobi.h  IceBomba.h  JuggleSaw.h  Shiversaw.h  Woodrow.h
src/hypermania/Mania/SPZ/: Canista.h  MicDrop.h  Shutterbug.c  Shutterbug.h  Tubinaut.h  WeatherMobile.c  WeatherMobile.h
src/hypermania/Mania/SSZ/: Dango.h  GigaMetal.h  Hotaru.c  Hotaru.h  HotaruHiWatt.h  HotaruMKII.h  Kabasira.c  Kabasira.h  Kanabun.h  MetalSonic.h
src/hypermania/Mania/TMZ/: BallHog.h  CrimsonEye.h  FlasherMKII.c  FlasherMKII.h  SentryBug.h  TurboTurtle.c  TurboTurtle.h
src/hypermania/Mania/UFO/: SpecialClear.h  UFO_Player.h  UFO_Setup.h
src/hypermania/Objects/: All.c  Debris.h  Enemy.c  Enemy.h  HUD.c  HUD.h  HyperStars.c  HyperStars.h  ImageTrail.c  ImageTrail.h  JetGlideEffect.c  JetGlideEffect.h  LevelSelect.c  LevelSelect.h  LogoSetup.c  LogoSetup.h  PlaneSeeSaw.c  PlaneSeeSaw.h  Player.c  Player.h  SHCLogo.c  SHCLogo.h  SaveGame.c  SaveGame.h  SpecialClear.c  SpecialClear.h  SpecialRing.c  SpecialRing.h  SuperFlicky.c  SuperFlicky.h  UFO_Player.c  UFO_Player.h  UFO_Setup.c  UFO_Setup.h  UISaveSlot.c  UISaveSlot.h
src/hypermania/Objects/Boilerplate/: Animals.h  Camera.c  Camera.h  Debris.c  Debris.h  Explosion.h  FXFade.c  FXFade.h  ItemBox.c  ItemBox.h  Music.c  Music.h  Ring.c  Ring.h  SaveGame.c  SaveGame.h  ScoreBonus.c  ScoreBonus.h  Zone.h
src/hypermania/Objects/HPZ/: HPZBeam.c  HPZBeam.h  HPZEmerald.c  HPZEmerald.h  HPZIntro.c  HPZIntro.h  HPZSetup.c  HPZSetup.h
src/hypermania/link/: All.h  Enemy.c  Enemy.h
src/hypermania/link/BSS/: BSS_Setup.c  BSS_Setup.h
src/hypermania/link/CPZ/: AmoebaDroid.h  Bubbler.h  CPZSetup.c  CPZSetup.h  CaterkillerJr.h  Grabber.h  Spiny.h
src/hypermania/link/Common/: CollapsingPlatform.c  CollapsingPlatform.h
src/hypermania/link/Cutscene/: FXFade.c  FXFade.h
src/hypermania/link/ERZ/: ERZStart.h  PhantomEgg.h  PhantomMystic.h  PhantomShinobi.h
src/hypermania/link/FBZ/: BigSqueeze.h  Blaster.h  Clucker.h  FBZTrash.h  Technosqueek.h
src/hypermania/link/GHZ/: Batbrain.c  Batbrain.h  BuzzBomber.h  Chopper.c  Chopper.h  Crabmeat.h  DDWrecker.h  DERobot.h  Motobug.h  Newtron.c  Newtron.h  Splats.h
src/hypermania/link/Global/: Animals.c  Animals.h  Camera.h  Explosion.h  InvincibleStars.h  ItemBox.c  ItemBox.h  Music.h  PauseMenu.c  PauseMenu.h  Ring.c  Ring.h  SaveGame.h  ScoreBonus.h  Zone.h
src/hypermania/link/HCZ/: Blastoid.h  Buggernaut.h  HCZSetup.h  Jawz.h  Jellygnite.h  LaundroMobile.h  MegaChopper.h  Pointdexter.h  TurboSpiker.h
src/hypermania/link/LRZ/: Drillerdroid.h  DrillerdroidO.h  Fireworm.h  HeavyKing.c  HeavyKing.h  HeavyRider.c  HeavyRider.h  Rexon.c  Rexon.h  RockDrill.c  RockDrill.h  Toxomister.h
src/hypermania/link/MMZ/: EggPistonsMKII.h  FarPlane.c  FarPlane.h  Gachapandora.h  MechaBu.h  PohBee.h  Scarab.c  Scarab.h
src/hypermania/link/MSZ/: Armadiloid.h  Bumpalo.h  Cactula.c  Cactula.h  DBTower.h  Hatterkiller.h  HeavyMystic.h  Rattlekiller.c  Rattlekiller.h  RollerMKII.h  UberCaterkiller.h  Vultron.h
src/hypermania/link/OOZ/: Aquis.h  MegaOctus.h  MeterDroid.h  OOZSetup.c  OOZSetup.h  Octus.c  Octus.h  Sol.h
src/hypermania/mod/: All.h
src/hypermania/new/: All.h
src/release-files/: modSettings.ini
(+221 files in other folders)
